--- a/PWEB/industria40/index.html
+++ b/PWEB/industria40/index.html
@@ -13,7 +13,7 @@
 	
 	<div class="content">
     <section class="section">	
-      <h1>Industria 4.0</h1>
+      <h1><b>INDÚSTRIA 4.0</b></h1>
     </section>
 		<section class="section">
 				<p>
@@ -38,6 +38,34 @@
 				<p>
 					Inovações tecnológicas no campo de comunicações prometem um mundo onde dispositivos interconectados na rede tendem a proporcionar conteúdo e informações relevantes aos seus usuários, onde quer que eles estejam. Comunicação homem- máquina e máquina-máquina já estão sendo estendidas para as coisas, ou objetos. De simples utensílios domésticos, denominados de inteligentes, a complexos sistemas de monitoramento de tremores na superfície terrestre, tudo está cada vez mais conectado à rede através de sensores e sistemas de comunicação Wi-Fi. Essa interconectividade entre objetos resultou no surgimento de um novo termo: Internet das Coisas (ITU, 2005).
 				</p>
+			</section>
+			<section class="section">	
+				<h2><b>CONCEITOS</b></h2>
+			</section>
+			<section class="section">
+				<p>Indústria 4.0 é um termo que vem do idioma alemão Industrie 4.0, que simboliza a quarta revolução industrial. É a ideia de indústria que integra as tecnologias emergentes da área de automação, controle e TI. (SILVEIRA, 2017)</p> 
+				<p>Silveira (2017) existem 5 princípios para que o desenvolvimento desse novo tipo de indústria seja feito com sucesso. São eles:</p>
+				<ol>
+					<li>Capacidade de operação em tempo real: É a aquisição e a análise de dados de forma imediata, possibilitando a tomada de decisões em tempo real. </li>
+					<li>Virtualização: A Indústria 4.0 visa uma cópia virtual das fábricas. Possibilitando a rastreabilidade e supervisão remota de todos os processos com a utilização de vários sensores espalhados pela fábrica.</li>
+					<li>Descentralização: Com o sistema cyber-físico, as tomadas de decisões serão feitas conforme com as exigências da produção em tempo real. As máquinas não vão receber comandos apenas, mas também irão dar informações sobre seu ciclo de trabalho. Sendo assim, os módulos da fábrica operarão de maneira descentralizada com a finalidade de melhorar os processos de produção. </li>
+					<li>Orientação a serviços: Uso de arquiteturas de software voltadas a serviços juntamente ao conceito de Internet of Services. </li>
+					<li>Modularidade: Produção feita por demanda, com a utilização de módulos na produção, proporcionando flexibilidade para mudar as tarefas das máquinas com extrema facilidade.</li>
+				</ol>
+				
+			</section>
+			<section class="section">	
+				<h2><b>REFERÊNCIAS</b></h2>
+			</section>
+			<section class="section">
+				<ul>
+					<li>KAGERMANN H.; et al. <b>Securing the future of German manufacturing industry: recommendations for implementing the strategic initiative industrie 4.0: final report of the industrie 4.0 working group</b>. Acatech - Alemanha, 2013.</li>
+					<li>KOLBERG, D.; ZÜHLKE, D. <b>Lean Automation enabled by Industry 4.0</b>. INCON 15th IFAC / IEEE / IFIP / FORS Symposium on Information Control Problems in Manufacturing, 2015. p. 1870-1875.</li>
+					<li>LASI, H.; et al. <b>Industry 4.0</b>. Business and Information Systems Engineering. Stuttgart, v.6, n.4, p. 239 – 242, jun. 2015.</li>
+					<li>BLOEM, J.; et al. <b>The Fourth Industrial Revolution: Things to Tighten the Link Between IT and OT</b>. Vint Research Report 3 of 4. SOGETI – Groningen, 2014.</li>
+					<li>ITU. <b>INTERNET OF THINGS</b>. ITU. Genebra, p. 126. 2005.</li>
+					<li>SILVEIRA, Cristiano. <b>O que é Indústria 4.0 e como ela vai impactar o mundo</b>. Disponível em: https://www.citisystems.com.br/industria-4-0/. Acesso em: 13 de maio de 2018.</li>
+				</ul>
 			</section>
 	</div>
 
