--- a/5semestre/PWEB/rio_claro/index.html
+++ b/5semestre/PWEB/rio_claro/index.html
@@ -22,7 +22,7 @@
       <header>
         <h2 class="article-header__h2">História</h2>
         <figure>
-          <img src="img/01.JPG" alt="Panorama da cidade de Rio Claro durante o 21.º Campeonato Mundial de Balonismo">
+          <img src="img/01.jpg" alt="Panorama da cidade de Rio Claro durante o 21.º Campeonato Mundial de Balonismo">
           <figcaption>Panorama da cidade de Rio Claro durante o 21.º Campeonato Mundial de Balonismo</figcaption>
         </figure>
         <p class="article-header__p ">História do Município - Rio Claro. O Rio Claro foi fundado em 10 de junho de 1827
