PWEB: Projeto final 0.2

--- a/5semestre/PWEB/final/src/main/webapp/publico/cidadesucesso.xhtml
+++ b/5semestre/PWEB/final/src/main/webapp/publico/cidadesucesso.xhtml
@@ -14,7 +14,7 @@
 	<h1>
 		<!--  informacoes da classe CidadeBean continuam disponiveis 
 		         nessa pagina mesmo que foi pag. cidade que exibiu -->
-		<h:outputText value="#{cidadeBean.cidade.nome}" />
+		<h:outputText value="#{cidadeBean.cidade.nomeCidade}" />
 		 ,seja Bem vindo
 	</h1>
 		seu cadastro foi efetuado com sucesso!!
