--- a/5semestre/PWEB/final/src/main/webapp/publico/listagemcidade.xhtml
+++ b/5semestre/PWEB/final/src/main/webapp/publico/listagemcidade.xhtml
@@ -22,26 +22,20 @@
 				<f:facet name="header">
 					<h:outputText value="codigo" />
 				</f:facet>
-				<h:outputText value="#{item.codigo}" />
+				<h:outputText value="#{item.IDCidade}" />
 			</h:column>
 
 			<h:column>
 				<f:facet name="header">
-					<h:outputText value="nome" />
+					<h:outputText value="NomeCidade" />
 				</f:facet>
-				<h:outputText value="#{item.nome}" />
+				<h:outputText value="#{item.NomeCidade}" />
 			</h:column>
 			<h:column>
 				<f:facet name="header">
-					<h:outputText value="e-mail" />
+					<h:outputText value="UFCidade" />
 				</f:facet>
-				<h:outputText value="#{item.email}" />
-			</h:column>
-			<h:column>
-				<f:facet name="header">
-					<h:outputText value="login" />
-				</f:facet>
-				<h:outputText value="#{item.login}" />
+				<h:outputText value="#{item.UFCidade}" />
 			</h:column>
 		</h:dataTable>
 
