--- a/5semestre/PWEB/final/src/main/webapp/publico/listagempessoa.xhtml
+++ b/5semestre/PWEB/final/src/main/webapp/publico/listagempessoa.xhtml
@@ -7,31 +7,42 @@
 
 <h:head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>Listagem de Permissões</title>
+	<title>Listagem de Pessoas</title>
 </h:head>
 
 <h:body>
-	<h1>Lista de Permissões</h1>
+	<h1>Lista de Pessoas</h1>
 	<hr></hr>
 	<h:form id="listagem">
-		<h:dataTable value="#{pessoaBean.listaPermissoes}" var="item"
+		<h:dataTable value="#{pessoaBean.listaPessoas}" var="item"
 			emptyMessage="Nenhum Registro Encontrado" paginator="true" rows="10"
 			aginatorPosition="bottom" selectionMode="single"
 			selection="#{pessoaBean.pessoa}">
 			<h:column>
 				<f:facet name="header">
-					<h:outputText value="codigo" />
+					<h:outputText value="IDPessoa" />
 				</f:facet>
-				<h:outputText value="#{item.codigoUsuario}" />
+				<h:outputText value="#{item.IDPessoa}" />
 			</h:column>
-
 			<h:column>
 				<f:facet name="header">
-					<h:outputText value="menu" />
+					<h:outputText value="nomePessoa" />
 				</f:facet>
-				<h:outputText value="#{item.opcaoMenu}" />
+				<h:outputText value="#{item.nomePessoa}" />
 			</h:column>
-			
+			<h:column>
+				<f:facet name="header">
+					<h:outputText value="CPFPessoa" />
+				</f:facet>
+				<h:outputText value="#{item.CPFPessoa}" />
+			</h:column>
+			<h:column>
+				<f:facet name="header">
+					<h:outputText value="enderecoPessoa" />
+				</f:facet>
+				<h:outputText value="#{item.enderecoPessoa}" />
+			</h:column>
+
 			<h:column>
 				<f:facet name="header">
 					<h:outputText value="alterar" />
