PWEB: Projeto final 0.3

--- a/5semestre/PWEB/final/src/main/webapp/publico/listagemcidade.xhtml
+++ b/5semestre/PWEB/final/src/main/webapp/publico/listagemcidade.xhtml
@@ -27,9 +27,9 @@
 
 			<h:column>
 				<f:facet name="header">
-					<h:outputText value="NomeCidade" />
+					<h:outputText value="nomeCidade" />
 				</f:facet>
-				<h:outputText value="#{item.NomeCidade}" />
+				<h:outputText value="#{item.nomeCidade}" />
 			</h:column>
 			<h:column>
 				<f:facet name="header">
